--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,8 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-
+*.cshtml linguist-detectable=false
+*.js linguist-detectable=false
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
